--- a/AuthService/AuthService.csproj
+++ b/AuthService/AuthService.csproj
@@ -6,6 +6,7 @@
 
   <ItemGroup>
     <PackageReference Include="IdentityServer4" Version="4.1.1" />
+    <PackageReference Include="IdentityServer4.EntityFramework" Version="4.1.1" />
   </ItemGroup>
 
 </Project>
