--- a/APIGateway/APIGateway.csproj
+++ b/APIGateway/APIGateway.csproj
@@ -5,8 +5,9 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="3.1.3" />
-    <PackageReference Include="Ocelot" Version="16.0.1" />
+    <PackageReference Include="MassTransit.AspNetCore" Version="7.1.1" />
+    <PackageReference Include="MassTransit.RabbitMQ" Version="7.1.1" />
   </ItemGroup>
+
 
 </Project>
