--- a/APIGateway/APIGateway.csproj
+++ b/APIGateway/APIGateway.csproj
@@ -5,8 +5,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="MassTransit.AspNetCore" Version="7.1.1" />
-    <PackageReference Include="MassTransit.RabbitMQ" Version="7.1.1" />
+    <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
+    <PackageReference Include="RabbitMQ.Client" Version="6.2.1" />
   </ItemGroup>
 
 
