--- a/PersonService/Properties/launchSettings.json
+++ b/PersonService/Properties/launchSettings.json
@@ -18,12 +18,13 @@
     },
     "PersonService": {
       "commandName": "Project",
-      "launchUrl": "weatherforecast",
+      "launchBrowser": true,
+      "launchUrl": "Swagger",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
       "nativeDebugging": false,
-      "applicationUrl": "https://localhost:5010;http://localhost:5011"
+      "applicationUrl": "http://localhost:5011"
     }
   }
 }
