--- a/IdentityService/Properties/launchSettings.json
+++ b/IdentityService/Properties/launchSettings.json
@@ -3,8 +3,8 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:5001/",
-      "sslPort": 44373
+      "applicationUrl": "http://localhost:5004",
+      "sslPort": 0
     }
   },
   "profiles": {
