--- a/WebUI/Properties/launchSettings.json
+++ b/WebUI/Properties/launchSettings.json
@@ -3,28 +3,25 @@
     "windowsAuthentication": false,
     "anonymousAuthentication": true,
     "iisExpress": {
-      "applicationUrl": "http://localhost:5002",
+      "applicationUrl": "http://localhost:5000",
       "sslPort": 0
     }
   },
-  "$schema": "http://json.schemastore.org/launchsettings.json",
   "profiles": {
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
-      "launchUrl": "Swagger",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
     },
-    "PersonService": {
+    "WebUI": {
       "commandName": "Project",
-      "launchUrl": "Swagger",
+      "launchBrowser": true,
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
-      "nativeDebugging": false,
-      "applicationUrl": "http://localhost:5002"
+      "applicationUrl": "https://localhost:5001;http://localhost:5000"
     }
   }
 }
