--- a/PersonService/Properties/launchSettings.json
+++ b/PersonService/Properties/launchSettings.json
@@ -18,6 +18,7 @@
     },
     "PersonService": {
       "commandName": "Project",
+      "launchBrowser": true,
       "launchUrl": "Swagger",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
